# engine

./: .gitignore  FileLoader.hs  Makefile  README.md  TODO.md  camera.c  camera.h  cl.c  cl.h  engine.c  engine.cabal  error.c  error.h  gameengine.cabal  gen.hs  geom.c  geom.h  globals.c  globals.h  model.json  rasterize.hs  ray.cl  render.c  render.h  stack.yaml  types.h
