name:            gameengine
version:         0.0.1.0
license:         AllRightsReserved
author:         Envielox <Envielox@gmail.com>
synopsis:        New approach to gameengining
cabal-version:   >= 1.8
build-type:      Simple
description: New approach to gameengining

flag debug
  description: compile C with -g and -O0
  default: False

flag cl
  description: compile with OpenCL support
  default: True

executable engine
  main-is:  engine.c
  c-sources: cl.c error.c geom.c globals.c render.c
  Other-Modules: FileLoader
  extra-libraries: m GL glfw
  if flag(cl)
    extra-libraries: OpenCL

  build-depends:
      aeson >= 0.10.0.0,
      base >= 4.5 && < 4.9,
      bytestring >= 0.10.6,
      unordered-containers >= 0.2.6,
      vector >= 0.11.0,
      scientific >= 0.3.4

  ghc-options: -no-hs-main -Wall -O2

  cc-options: -std=c11 -Wall
  if flag(debug)
    cc-options: -g
  else
    cc-options: -O2
  if !flag(cl)
    cc-options: -DTRACER_CL=0
