name:            gameengine
version:         0.0.1.0
license:         AllRightsReserved
author:         Envielox <Envielox@gmail.com>
synopsis:        New approach to gameengining
cabal-version:   >= 1.8
build-type:      Simple
description: New approach to gameengining

flag debug
  description: compile C with -g and -O0
  default: False

executable engine
  main-is:  engine.c
  c-sources: cl.c error.c geom.c globals.c render.c
  Other-Modules: FileLoader
  extra-libraries: m OpenCL
  if os(windows)
    extra-libraries: opengl32 glfw3
    -- TODO: find a better way to do this
    --extra-lib-dirs: "path to opencl library dir" "path to glfw lib-mingw-w64 dir"
    --include-dirs: "path to opencl include dir" "path to glfw include dir"
  else
    extra-libraries: GL glfw

  build-depends:
      aeson >= 0.10,
      base >= 4.5 && < 4.9,
      bytestring >= 0.10,
      unordered-containers >= 0.2,
      vector >= 0.11,
      scientific >= 0.3

  ghc-options: -no-hs-main -Wall -O2

  cc-options: -std=c11 -Wall
  if flag(debug)
    cc-options: -g
  else
    cc-options: -O2
