name:            gameengine
version:         0.0.1.0
license:         AllRightsReserved
author:         Envielox <Envielox@gmail.com>
synopsis:        New approach to gameengining
cabal-version:   >= 1.8
build-type:      Simple
description: New approach to gameengining

flag debug
  description: compile C with -g and -O0
  default: False

executable gen
  main-is: gen.hs

  build-depends:
    aeson >= 0.10,
    array >= 0.5,
    base >= 4.5 && < 4.9,
    bytestring >= 0.10

  ghc-options: -Wall -O2 -funbox-strict-fields

executable engine
  main-is:  engine.c
  c-sources: cl.c camera.c error.c geom.c globals.c render.c
  Other-Modules: FileLoader
  extra-libraries: m OpenCL
  if os(windows)
    extra-libraries: opengl32 glfw3
  else
    extra-libraries: GL glfw

  build-depends:
      aeson >= 0.10,
      base >= 4.5 && < 4.9,
      bytestring >= 0.10,
      unordered-containers >= 0.2,
      vector >= 0.11

  ghc-options: -no-hs-main -Wall -O2

  cc-options: -std=c11 -Wall
  if flag(debug)
    cc-options: -g
  else
    cc-options: -O2
